# calcal

./: Cargo.toml  README.md
src/: dbus.rs  main.rs  utils.rs
src/dbus/: calendar.rs  mod.rs  sources.rs
src/eds/: calendar.rs  event.rs  ipc.rs  mod.rs
