[package]
name = "calcal"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
calcard = "0.1.3"
chrono = "0.4.41"
chrono-tz = "0.10.4"
clap = { version = "4.5.45", features = ["derive"] }
gio = "0.21.0"
humantime = "2.2.0"
rrule = "0.14.0"
serde_json = "1.0.142"
tokio = { version = "1.46.1", features = ["macros", "rt", "rt-multi-thread"] }
zbus = "5.9.0"
